[package]
name = "tictactoe-catzero"
version = "0.1.0"
authors = ["BlockCat"]
edition = "2018"

[dependencies]
catzero = { git = "https://github.com/BlockCat/CatZero.git" }
mcts = {  git = "https://github.com/BlockCat/mcts.git" }
rand = "0.8.4"
hashbrown = "0.1.7"
tensorflow = { version = "0.17.0", features=["tensorflow_gpu"] }
rayon = "1.5.1"
